# roam

./: .gitignore  CHANGELOG.md  CNAME  CODEGEN.md  Cargo.toml  DEVELOP.md  DISPATCH.md  HANDOFF.md  Justfile  Package.swift  README.md  package.json  pnpm-lock.yaml  todo.md
.config/: nextest.toml
.config/tracey/: config.styx
.github/workflows/: ci.yml  docs.yml  release-plz.yml
.zed/: settings.json
docs/content/: _index.md  _old-delta.md  _old-spec-shm.md  _old-spec.md  spec-sig.md  spec.md  v6-to-v7.md
docs/design/: flexible-wire.md  shm-exact-layout-fast-path.md
docs/templates/: base.html  index.html  page.html  section.html
fuzz/roam-afl/: Cargo.toml
fuzz/roam-shm-afl/: Cargo.toml
fuzz/telex-afl/: Cargo.toml  README.md
fuzz/telex-shm-afl/: Cargo.toml  README.md
internal/: CALL_ON_ME.md  channels-are-easy-and-fun.md  facet-erased.md  zerocopy-todo.md
rust-examples/: Cargo.toml  README.md.in
rust-examples/examples/: borrowed_and_channels.rs  memory_proxying.rs  shm_host_two_guests.rs  stable_conduit_reconnect.rs  virtual_connections.rs
rust-examples/src/: lib.rs
rust-legacy/roam-hash/: Cargo.toml
rust-legacy/roam-legacy/: Cargo.toml
rust-legacy/roam-memory/: Cargo.toml
rust-legacy/roam-schema/: Cargo.toml
rust-legacy/roam-shm-legacy/: Cargo.toml
rust-legacy/roam-websocket-legacy/: Cargo.toml
rust-legacy/wasm-browser-tests/: Cargo.toml
rust/facet-cbor/: CHANGELOG.md
rust/facet-experiments/: Cargo.toml
rust/facet-experiments/src/: main.rs
rust/roam-bench/: Cargo.toml  build.rs
rust/roam-bench/benches/: rpc.rs
rust/roam-bench/proto/: adder.proto
rust/roam-bench/src/: lib.rs
rust/roam-codegen/: CHANGELOG.md  Cargo.toml
rust/roam-core/: CHANGELOG.md  Cargo.toml
rust/roam-core/src/: bare_conduit.rs  channel.rs  connection_handle.rs  dispatch.rs  driver.rs  extensions.rs  forwarding.rs  lib.rs  memory_link.rs  middleware.rs  reliable_acceptor.rs  reliable_link.rs  replay_buffer.rs  session.rs  stable_conduit.rs  tests.rs  tunnel.rs  types.rs  wasm_driver.rs
rust/roam-core/src/bare_conduit/: mod.rs
rust/roam-core/src/session/: builders.rs  mod.rs
rust/roam-core/src/stable_conduit/: mod.rs  tests.rs
rust/roam-core/src/tests/: driver_tests.rs  mod.rs  service_macro_shared.rs  service_macro_tests.rs  session.rs  shm_driver_tests.rs  shm_service_macro_tests.rs
rust/roam-fdpass/: CHANGELOG.md
rust/roam-frame/: CHANGELOG.md  Cargo.toml
rust/roam-hash/: CHANGELOG.md  Cargo.toml
rust/roam-http-bridge/: CHANGELOG.md  Cargo.toml
rust/roam-inprocess/: CHANGELOG.md  Cargo.toml
rust/roam-local/: CHANGELOG.md
rust/roam-macros/: CHANGELOG.md
rust/roam-macros-core/: CHANGELOG.md  Cargo.toml
rust/roam-macros-parse/: CHANGELOG.md  Cargo.toml
rust/roam-macros-parse/src/: lib.rs
rust/roam-memory/: CHANGELOG.md  Cargo.toml
rust/roam-miri-test/: CHANGELOG.md  Cargo.toml  Justfile
rust/roam-miri-test/src/: main.rs
rust/roam-miri-test/tests/: generated_dispatch.rs  vec_deserialize_bug.rs
rust/roam-next/: Cargo.toml
rust/roam-next/src/: lib.rs
rust/roam-postcard/: CHANGELOG.md
rust/roam-schema/: CHANGELOG.md
rust/roam-session/: CHANGELOG.md  Cargo.toml
rust/roam-shm/: CHANGELOG.md  Cargo.toml
rust/roam-shm-ffi/: CHANGELOG.md  Cargo.toml
rust/roam-shm/src/: auditable.rs  bootstrap.rs  channel.rs  diagnostic.rs  diagnostic_snapshot.rs  driver.rs  framing.rs  guest.rs  host.rs  layout.rs  lib.rs  mmap_registry.rs  msg.rs  peer.rs  peer_table.rs  segment.rs  slot_pool.rs  spawn.rs  transport.rs  var_slot_pool.rs  varslot.rs  wait.rs
rust/roam-shm/tests/: backpressure_unit.rs  bootstrap_cross_language.rs  driver.rs  error_scenarios.rs  mmap.rs  reproduction.rs  roundtrip.rs  stress.rs  swift_guest_cross_language.rs  tracing.rs  transport.rs  virtual_connections.rs
rust/roam-shm/tests/support/: guest_process_main.rs
rust/roam-stream/: CHANGELOG.md  Cargo.toml  justfile
rust/roam-stream/examples/: isolate_bug.rs  load_test_chaos.rs  load_test_comprehensive.rs  load_test_unix.rs  minimal_repro.rs
rust/roam-stream/src/: connection.rs  driver.rs  framing.rs  lib.rs  reconnecting.rs
rust/roam-stream/tests/: forwarding.rs  load_test.rs  reconnecting.rs  virtual_connections.rs
rust/roam-telemetry/: CHANGELOG.md  Cargo.toml
rust/roam-tracing/: CHANGELOG.md
rust/roam-types/: CHANGELOG.md  Cargo.toml
rust/roam-types/src/: calls.rs  channel.rs  channel_binding.rs  conduit.rs  connectivity-cl.rs  connectivity.rs  connectivity2.rs  lib.rs  link.rs  message.rs  metadata.rs  requests.rs  rpc_plan.rs  schema.rs  selfref.rs  services.rs  wire.rs
rust/roam-websocket/: CHANGELOG.md  Cargo.toml
rust/roam-websocket/src/: lib.rs  native.rs  wasm.rs
rust/roam-wire/: CHANGELOG.md  Cargo.toml
rust/roam-wire/src/: lib.rs
rust/telex/: Cargo.toml  README.md
rust/telex-postcard/: Cargo.toml
rust/telex-postcard/src/: decode.rs  deserialize.rs  error.rs  lib.rs  plan.rs  raw.rs
rust/telex/src/: client_logging.rs  lib.rs  schema_deser.rs  server_logging.rs
rust/telex/tests/: schema_compat_tests.rs  schema_resume_tests.rs  service_macro_shared.rs  service_macro_tests.rs  shm_service_macro_tests.rs
rust/wasm-browser-tests/: Cargo.toml
rust/wasm-browser-tests/src/: lib.rs
rust/wasm-inprocess-tests/: Cargo.toml
rust/wasm-inprocess-tests/src/: lib.rs
scripts/: build-telex-shm-test-setup.sh  cross-language-test.sh  pre-push  publish-npm.mjs  sync-ts-package-versions.test.mjs
spec/: TESTING.md
spec/spec-tests/: Cargo.toml
spec/spec-tests/src/: harness.rs
spec/spec-tests/tests/: binary_payload_transport_matrix.rs  binary_payloads.rs  channeling.rs  client_mode.rs  echo.rs  protocol.rs  spec_matrix.rs  streaming.rs  swift_guest_cross_language.rs  testbed.rs  virtual_connections.rs
spec/spec-tests/tests/cases/: binary_payload_transport_matrix.rs  binary_payloads.rs  channeling.rs  cross_language_shm_guest_matrix.rs  testbed.rs
specs/: reconnecting-client.md
swift/: HARDEN.md
todo/: ROAM_NEXT.md
typescript/: package.json  pnpm-lock.yaml
xtask/: Cargo.toml  README.md  README.md.in
(+450 files in other folders)
