[package]
name = "telex-afl"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
afl = "0.15"
telex = { path = "../../rust/telex" }
telex-core = { path = "../../rust/telex-core" }
telex-types = { path = "../../rust/telex-types" }
spec-proto = { path = "../../spec/spec-proto" }
tokio = { version = "1", features = ["rt", "time", "macros"] }

[[bin]]
name = "protocol_decode"
path = "src/bin/protocol_decode.rs"

[[bin]]
name = "testbed_mem_session"
path = "src/bin/testbed_mem_session.rs"

[[bin]]
name = "protocol_decode_repro"
path = "src/bin/protocol_decode_repro.rs"
