[package]
name = "telex-shm-afl"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
afl = "0.15"
telex-shm = { path = "../../rust/telex-shm" }
telex-types = { path = "../../rust/telex-types" }
shm-primitives = { path = "../../rust/shm-primitives" }
tempfile = "3"
tokio = { version = "1", features = ["rt"] }

[[bin]]
name = "framing_peek"
path = "src/bin/framing_peek.rs"

[[bin]]
name = "shm_link_roundtrip"
path = "src/bin/shm_link_roundtrip.rs"
