[package]
name = "facet-experiments"
version = "0.1.0"
edition = "2024"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
facet = { path = "../../../facet/facet" }
facet-reflect = { path = "../../../facet/facet-reflect" }
facet-json = { path = "../../../facet/facet-json" }
facet-postcard = { path = "../../../facet/facet-postcard" }
tokio = { version = "1", features = ["sync"] }
