[package]
name = "roam-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core implementations: ReliableLink, ReliableAcceptor, Session"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
roam-types.workspace = true
facet.workspace = true
facet-core.workspace = true
facet-reflect.workspace = true
facet-format.workspace = true
facet-postcard.workspace = true
futures-util.workspace = true
tokio.workspace = true
tracing.workspace = true
smallvec.workspace = true
getrandom.workspace = true
zerocopy.workspace = true
facet-error = "0.43.2"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
