[package]
name = "roam-miri-test"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dev-dependencies]
roam = { path = "../roam" }
roam-core = { path = "../roam-core" }
roam-types = { path = "../roam-types" }
facet = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "sync", "time", "macros", "net"] }
once_cell = "1"
