[package]
name = "roam-next"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
facet.workspace = true
facet-core.workspace = true
facet-format.workspace = true
facet-postcard.workspace = true
facet-reflect.workspace = true
