[package]
name = "roam-shm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared-memory transport for roam — lock-free rings for zero-copy IPC"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
roam-types.workspace = true
shm-primitives.workspace = true
tokio = { workspace = true, features = ["sync"] }

