[package]
name = "roam-stream"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Byte-stream transport (TCP, Unix, stdio) for roam — length-prefix framing over AsyncRead/AsyncWrite"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
roam-types.workspace = true
tokio = { workspace = true, features = ["net", "io-util", "rt", "sync"] }
