[package]
name = "roam-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Base types used by roam crates"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
bitflags.workspace = true
facet.workspace = true
facet-core.workspace = true
facet-path.workspace = true
facet-reflect.workspace = true
smallvec.workspace = true
