[package]
name = "roam-websocket"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WebSocket transport for roam — message-framed Link over tungstenite"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
roam-types.workspace = true
tokio = { workspace = true, features = ["net", "rt", "sync"] }
tokio-tungstenite.workspace = true
futures-util.workspace = true
