[package]
name = "roam-wire"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Spec-level wire types for roam (Message, Hello, metadata, errors)"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
facet.workspace = true
facet-postcard.workspace = true
roam-types = { version = "3.0.0", path = "../roam-types" }

[[bin]]
name = "golden_vectors"
path = "src/bin/golden_vectors.rs"
