[package]
name = "telex-postcard"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords = ["postcard", "serialization", "facet", "rpc"]
categories = ["encoding"]
description = "Postcard serialization for telex with translation plan support"

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[dependencies]
facet = { workspace = true }
facet-core = { workspace = true }
facet-reflect = { workspace = true }
telex-schema = { workspace = true }

[dev-dependencies]
facet-postcard = { workspace = true }
telex-types = { path = "../telex-types" }
