[package]
name = "telex"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core Telex library crate"
readme = "README.md"
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata]

[package.metadata."docs.rs"]
rustdoc-args = ["--html-in-header", "arborium-header.html"]

[features]
default = ["runtime"]
runtime = ["dep:telex-core"]

[dependencies]
telex-types.workspace = true
telex-service-macros.workspace = true
telex-core = { workspace = true, optional = true }
facet.workspace = true
telex-postcard.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net"] }
telex-stream = { path = "../telex-stream" }
telex-core = { path = "../telex-core" }
shm-primitives = { path = "../shm-primitives" }
telex-shm = { path = "../telex-shm" }
tempfile.workspace = true
tracing-subscriber.workspace = true
