[package]
name = "wasm-browser-tests"
version.workspace = true
edition.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

# All dependencies are wasm32-only since the entire crate is cfg-gated
[target.'cfg(target_arch = "wasm32")'.dependencies]
telex-websocket.workspace = true
telex-core.workspace = true
telex-types.workspace = true
spec-proto.workspace = true

wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
