[package]
name = "spec-tests"
version = "7.3.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false
description = "Compliance tests for the canonical telex spec in docs/content/"

[dependencies]
telex = { workspace = true }
telex-core = { workspace = true }
telex-local.workspace = true
telex-postcard.workspace = true
telex-shm.workspace = true
telex-stream = { workspace = true }
telex-websocket = { workspace = true }
telex-types = { workspace = true }
shm-primitives = { workspace = true }
spec-proto.workspace = true
moire = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "net", "time", "process"] }
tempfile.workspace = true

[dev-dependencies]
shm-primitives-async = { path = "../../rust/shm-primitives-async" }
libc.workspace = true
